--- a/service.yaml
+++ b/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: shipping-service-svc
+  namespace: lab-cnb-22
   labels:
     app: shipping-service
 spec:
@@ -9,6 +10,6 @@ spec:
   ports:
     - name: app-port
       targetPort: app-port
-      port: 3000
+      port: 3001
   selector:
     app: shipping-service
